# Volunthub_backend

./: .gitignore  REPO_GAPS.md  alembic.ini  db-compose.yml  pyproject.toml
app/: main.py
app/domain/: event.py  eventDto.py  inscription.py  task.py  user.py
app/graphql/: context.py  schema.py
app/graphql/loaders/: EventCategoryObtainLoader.py  __init__.py  event_participants_count_loader.py
app/graphql/mutations/: event_mutations.py  user_mutatios.py
app/graphql/queries/: category_queries.py  event_queries.py  user_queries.py
app/graphql/types/: category.py  event.py  task.py  user.py
app/infrastructure/: database.py  settings.py
app/infrastructure/core/: database.py  db_settings.py  settings.py
app/infrastructure/depends/: container.py
app/infrastructure/helpers/: geo_adapter.py
app/infrastructure/models/: __init__.py  categoryModel.py  eventModel.py  inscriptionModel.py  taskModel.py  userModel.py
app/repositories/: base_repository.py  category_repository.py  event_repository.py  inscription_repository.py  task_repository.py  user_repository.py
app/repositories/mappers/: category_mapper.py  event_graphql_mapper.py  event_mapper.py  inscription_mapper.py  task_mapper.py  user_mapper.py
app/services/: category_service.py  event_service.py  inscription_service.py  task_service.py  user_service.py
migrations/: env.py
migrations/versions/: 7de456f85a15_initial_schema.py
scripts/: clean.sh
